# GodotMaker_ProviderPlus

./: .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.godotmaker/: config.yaml
agent-runtimes/: capability-contract.md
agents/: decomposer.md  gdd-auditor.md  reviewer.md  verifier.md  worker.md
config/: addon_versions.json  config.yaml.default  settings.json  stage_schemas.json
docs/: getting-started.md  hooks.md  index.md  migration-guide.md  tips.md  user-notice.md  versioning.md
hooks/: check_asset_access.py  check_completion.py  check_file_permissions.py  check_stage_prerequisites.py  check_worker_report.py  log_subagent.py  session_start.py  stage_reminder.py
migrations/: 20260507120000_introduce_tag_based_pipeline.py  20260521191628_add_style_md.py  20260528004107_visual_asset_contract.py  README.md  _helpers.py
scripts/: install-hooks.sh  migrate_to_branch.sh  pre-commit  pre-push
shell/: _read_config.sh  publish.ps1  publish.sh  report.bat  report.sh
templates/: ASSETS.md  GAP.md  GDD.md  MEMORY.md  PLAN.md  SCENES.md  STRUCTURE.md  TOC.md  game-claude.md
tests/: test_agents.py  test_audit_workflow.py  test_config_consistency.py  test_pipeline_e2e.py  test_playable_unit_contract_docs.py  test_verifier_godot_path_docs.py  test_visual_qa_script.py
tools/: agent_runtime.py  append_stage_event.py  asset_gen.py  check_env.py  migrate.py  (+4 more)
(+173 files in other folders)
